<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('affectations', function (Blueprint $table) {
            $table->id();
            $table->ForeignId('tache_id')->constrained()->cascadeOnDelete();
            $table->ForeignId('user_id')->constrained()->cascadeOnDelete();
            $table->enum('status',['up_comming','in_progress','completed'])->default('up_comming');
            $table->unique(['user_id','tache_id']);
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('affectations');
    }
};
