@startuml ''

'class abstraite
class User {
  +id: bigint
  +firstName: string
  +lastName: string
  +email: string
  +role:string
  +password: string
}

' les class

class Annonce {
  +id: bigint
  +titre: string
  +contenu: text
  +type: string
}

class Demande {
  +id: bigint
  +type: string
  +description: text
  +status: string
  +date: date
}

class Tache {
  +id: bigint
  +titre: string
  +description: text
  +status: string
  +dateLimite: datetime
}

class Reunion {
  +id: bigint
  +titre: string
  +description: text
  +date: date
  +heure: time
  +lieu: string
}

class Commentaire {
  +id: bigint
  +contenu: text
}
note right of Commentaire
Relation polymorphique :
Tache, Reunion, Demande
end note

class Notification {
  +id: bigint
  +message: string
  +lu: boolean
}
note right of Notification
Relation polymorphique :
Tache, Reunion, Demande, Annonce
end note


'tableau piveau

class Affectation {
  +status:string
}

class Invitation {
  +status:string
}

' user relations

User "1" -- "0..*" Annonce 
User "1" -- "0..*" Tache 
User "1" -- "0..*" Reunion 
User "1" -- "0..*" Commentaire 
User "1" -- "0..*" Demande 

' many to many

(User,Tache) .. Affectation
(User, Reunion) .. Invitation

'la composition

Demande "1" *-- "0..*" Commentaire
Tache "1" *-- "0..*" Commentaire
Reunion "1" *-- "0..*" Commentaire


Tache "1" *-- "0..*" Notification
Reunion "1" *-- "0..*" Notification
Annonce "1" *-- "0..*" Notification
Demande "1" *-- "0..*" Notification

@enduml